Implemented hate-speech algorithm and bug fixes
